testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardNotEnabled.stderr

ExtraConstraintsWildcardNotEnabled.hs:4:10: error:
    Found constraint wildcard ‘_’ standing for ‘Show a’
    To use the inferred type, enable PartialTypeSignatures
    In the type signature:
      show' :: _ => a -> String
